{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 18,
  "lineage": "9a451405-6590-9a32-8efa-ee6623694b10",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-07-16T15:16:12.845-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/timer-463317/global/firewalls/nytc-allow-egress",
            "log_config": [],
            "name": "nytc-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/networks/nytc-vpc",
            "params": [],
            "priority": 1000,
            "project": "timer-463317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/firewalls/nytc-allow-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-16T15:16:13.042-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/timer-463317/global/firewalls/nytc-allow-ingress",
            "log_config": [],
            "name": "nytc-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/networks/nytc-vpc",
            "params": [],
            "priority": 1000,
            "project": "timer-463317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/firewalls/nytc-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250712",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/timer-463317/zones/us-central1-a/disks/nice-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-07-16T15:16:44.623-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/timer-463317/zones/us-central1-a/instances/nice-vm",
            "instance_id": "6265972411617090083",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "kamzy:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDr/LUQeTgof0gDgcE9deP1xLVasgRgMNF9AidttBPp5QDLJLjfPHe4sndM5d2533bdsEYt+0Uz7OQF51M6h7Fn+PHXpr5WqNG3TRq37pHMvjkpQFy2MXbHj1Dgz3hj8mN+hSZu5JJ04YQTmJXwDoK5vRgAbeYYRN2oqvrCKwOEv9Q8X87jqBB/ig87E+4N2VaAbU2l6JBbPdDrlKpbzqsMF2zW38BCgVrNd/8Oyf0nKuIdkr1aofo164LIuGcIfkU8Sl13GqCAd+1FTT3EqkCKVXspiB64MiC24fOwg5dpCtTA49lY5eBLA8Aeq7dVC+gldRSAecUdibquCdUdSS+ZDr6pQW2nykiYQG2/uTWK2WUwzjnOnW82d2g8Yn3aUemnPZpsagpRlgY/fMmARBDZ+iOF5mCGsrltGgHAJQohgRJ [...]
            },
            "metadata_fingerprint": "J7hb-MhqO2w=",
            "name": "nice-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.44.146.28",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/networks/nytc-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/timer-463317/regions/us-central1/subnetworks/nytc-subnet",
                "subnetwork_project": "timer-463317"
              }
            ],
            "project": "timer-463317",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/timer-463317/zones/us-central1-a/instances/nice-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/timer-463317/global/networks/nytc-vpc",
            "mtu": 0,
            "name": "nytc-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8330642291216980603",
            "numeric_id": "8330642291216980603",
            "project": "timer-463317",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/networks/nytc-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-16T15:16:13.506-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/timer-463317/regions/us-central1/subnetworks/nytc-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "nytc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/timer-463317/global/networks/nytc-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "timer-463317",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/timer-463317/regions/us-central1/subnetworks/nytc-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6185508875091155522
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}